# Vision-Quest

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
agent/: .env.example  main.py  processors.py  pyproject.toml
src/: App.tsx  index.css  types.ts
src/api/: geminiService.ts  streamService.ts  tokenProvider.ts
src/assets/: badges.ts  items.ts  riddles.ts  zones.ts
src/audio/: soundManager.ts
src/components/: LevelUpOverlay.tsx  StreamVideoCall.tsx
src/hooks/: useNPCReaction.ts  useVisionLoop.ts  useVoiceRecognition.ts
src/npcs/: jester.ts  sage.ts  shadow.ts
src/screens/: CameraSetup.tsx  Landing.tsx  NPCEncounter.tsx  PlayerProfile.tsx  RewardScreen.tsx  Settings.tsx  VillageMap.tsx  ZoneTransition.tsx
src/store/: challengeStore.ts  gameStore.ts  playerStore.ts
src/vision/: detectionUtils.ts
